--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:5000",
   "scripts": {
+    "server": "json-server --watch db.json --port 5000",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "startDev": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "concurrently": "^8.0.1",
+    "dotenv": "^16.0.3",
     "framer-motion": "^4.1.17",
+    "json-server": "^0.17.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
